Update Makefile to add cmd 'make tar'. Add return to main() in lisod.c. Add header file signal.h to server.c

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,6 @@
 CC=gcc
 CFLAGS=-Wall -Werror -g
 LDFLAGS=
-SRCS=Makefile server.h server.c config.h lisod.c io.h io.c
 
 all: lisod
 
@@ -18,3 +17,6 @@ io.o: io.c io.h
 
 clean:
 	rm -rf *.o *.gch lisod
+
+tar:
+	(make clean; cd ../..; tar cvf 15-441-project-1.tar 15-441-project-1)
