--- a/src/Makefile
+++ b/src/Makefile
@@ -2,9 +2,7 @@ CC=gcc
 CFLAGS=-Wall -Werror -g
 LDFLAGS=
 
-all: lisod
-
-lisod: lisod.o server.o io.o
+all: lisod.o server.o io.o
 
 lisod.o: lisod.c config.h server.h
 	$(CC) $(CFLAGS) -c lisod.c config.h server.h
@@ -16,7 +14,4 @@ io.o: io.c io.h
 	$(CC) $(CFLAGS) -c io.h io.c
 
 clean:
-	rm -rf *.o *.gch lisod
-
-tar:
-	(make clean; cd ../..; tar cvf 15-441-project-1.tar 15-441-project-1)
+	rm -rf *.o *.gch
